ms1/ms1-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms1
  namespace: default
  labels:
    example: ms1-route
spec:
  parentRefs:
    - name: http
      namespace: gloo-system
  rules:
    - backendRefs:
        - kind:  Service
          name: ms1-service
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /service1
